# conan-cmake-template

./: .gitignore  CMakeLists.txt  build.sh  code_check.sh  conanfile.py
cmake/: findAllTarget.cmake  {{project}}CompileFlags.cmake
include/: {{project}}.hpp
include/{{project}}/: {{project}}.hpp
src/: CMakeLists.txt  {{project}}.cpp
test/: CMakeLists.txt
test/unit_test/: test_{{project}}.cpp
